--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
 .App {
+
   text-align: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+
+  background-color: wheat;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inglist{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 27px;
+  column-gap: 20px;
+  margin: 40px;
+
+}
+
+
+.ingredient{
+  padding: 20px;
+  border: 2px solid;
+  background-color: rgb(1, 170, 119);
+  transition: all .5s;
+
+ 
+}
+
+.ingredient:hover{
+  background-color: rgb(0, 214, 150);
+  transform: scale(1.2);
+ 
+  text-shadow: .5px .5px 3px ghostwhite;
+  transition: text-shadow .4s .1s;
+  outline:2px solid rgba(0, 255, 149, 0.774);
+  transition: outline .3s;
+
+}
+
+.narrow{
+  color: ghostwhite;
+  margin: 30px;
+}
+
+.links nav{
+  background-color: midnightblue;
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ 
+ 
+
+
+  /* margin-top: 10px; */
+
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.links nav :hover{
+
+  /* background-color: wheat; */
+  text-shadow: 1px 1px 1px ;
+  background-color: rgb(255, 236, 200);
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.links a{
+ 
+  margin-top: 10px;
+  margin-left: 2px;
+  margin-right: 1px;
+  background-color: rgb(184, 155, 103);
+  text-decoration: none;
+  color: black;
+  font-size: 37px;
+  padding: 20px;
+  padding-left: 35px;
+
+  border: 2px solid rgba(0, 0, 0, 0);
+  /* border-bottom: 2px solid; */
+  border-top-right-radius: 20px;
+  border-top-left-radius: 9px;
+  transition: .2s;
+
+
+}
+
+
+
+a.active{
+ 
+
+  background-color: wheat;
+  text-shadow: none;
+  transform: scaleX(1.05) translateX(4px);
+
+}
+
+a.active:hover{
+  text-shadow: none;
+  background-color: wheat;
+}
+
+
+.forbidden{
+  font-size: 33px;
 }
