--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ body{
 }
 
 .inglist{
+  
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -26,24 +27,27 @@ body{
   font-family: 'Cormorant SC', serif;
   font-size: 19px;
   background-color: rgb(1, 170, 119);
-  transition: all .5s;
+  transition: all .6s;
 
  
 }
 
 .ingredient:hover{
-  background-color: rgb(0, 214, 150);
+  background: rgb(201,255,239);
+  background: linear-gradient(152deg, rgba(201,255,239,1) 3%, rgba(36, 134, 105, 0.919) 13%, rgba(46,255,192,1) 48%, rgba(201,255,239,1) 62%, rgba(46,255,192,1) 69%, rgba(36,134,105,1) 81%, rgba(46, 255, 192, 0.962) 93%);
   transform: scale(1.2);
- 
+  border-radius: 5px;
+  transition: border-radius 2s;
   text-shadow: .5px .5px 3px ghostwhite;
   transition: text-shadow .4s .1s;
   outline:2px solid rgba(0, 255, 149, 0.774);
   transition: outline .3s;
-
+  z-index: 1;
+  transition: z-index none;
 }
 
 .narrow{
-  color: ghostwhite;
+
   margin: 30px;
 }
 
@@ -68,7 +72,7 @@ body{
   /* background-color: wheat; */
   text-shadow: 1px 1px 1px ;
   background-color: rgb(255, 236, 200);
-  border-right: 11px solid rgb(255, 236, 200);
+  border-right: 7px solid rgb(255, 236, 200);
   
 
 }
@@ -90,7 +94,7 @@ body{
 
   border-top-right-radius: 20px;
   border-top-left-radius: 9px;
-  border-right: 11px solid rgba(46, 22, 6, 0.288); 
+  border-right: 7px solid rgba(46, 22, 6, 0.288); 
   transition: .2s;
 
 
@@ -106,8 +110,10 @@ a.active{
  
 
   background-color: wheat;
-  text-shadow: none;
-  transform: scaleX(1.05) translateX(4px);
+  text-shadow: 1px 1px 15px blue;
+
+  transition: text-shadow 1s .3s;
+  transform: scaleX(1.10) scaleY(1.04) translateX(7px);
   border-right: 4px solid wheat; 
   z-index: 1;
   transition: z-index none;
@@ -118,7 +124,7 @@ a.active{
 }
 
 a.active:hover{
-  text-shadow: none;
+  text-shadow: 1px 1px 15px blue;
   background-color: wheat;
   border-right: 4px solid wheat; 
   
