--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@ body{
 
 
 
+
+
 .title{
 position: absolute;
 font-family: 'Cormorant SC', serif;
@@ -20,7 +22,50 @@ font-size: 24px;
  justify-content: space-evenly;
  right: 0;
  margin-right: 70px;
+
  
+
+}
+
+@keyframes zoomIn {
+  0% {
+    transform: scale(0);
+  }
+  95%{
+    transform: scale(1.10);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
+img{
+  position: absolute;
+  opacity: .7;
+  filter: hue-rotate(280deg);
+  transition: 2s;
+  animation: .75s ease-out 0s 1 zoomIn;
+  
+ 
+  height: 135px;
+  width: 411px;
+  top:16px;
+  right:0;
+}
+
+img:hover{
+  filter: hue-rotate(200deg) ;
+
+  transition: 1.5s;
+  transition: filter 4s .5s, transform .8s;
+  transform: scale(1.05);
+  opacity: 1;
+}
+
+.home{
+  transform: scale(1.5);
+  transition: 3s;
 
 }
 
@@ -31,7 +76,9 @@ font-size: 24px;
   flex-wrap: wrap;
   row-gap: 27px;
   column-gap: 20px;
-  margin: 40px;
+  margin: 70px;
+
+  justify-content: center;
 
 }
 
@@ -75,25 +122,22 @@ button{
   margin: 30px;
 }
 
+nav{
+  height: 165px;
+}
+
 .links nav{
-  background-color: midnightblue;
+  background: rgb(2,0,46);
+  background: linear-gradient(152deg, rgba(2,0,46,1) 3%, rgba(0,73,100,1) 47%, rgba(8,66,80,1) 77%);
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end;
   border-bottom: 1px solid saddlebrown;
-  
- 
- 
-
-
-  /* margin-top: 10px; */
-
  
 }
 
 .links nav :hover{
 
-  /* background-color: wheat; */
   text-shadow: 1px 1px 1px ;
   background-color: rgb(255, 236, 200);
   border-right: 7px solid rgb(255, 236, 200);
@@ -103,7 +147,7 @@ button{
 
 .links a{
  
-  font-family: 'Cormorant SC', serif;
+  font-family: 'Great Vibes', cursive;
   margin-top: 10px;
   margin-left: 2px;
   margin-right: 1px;
@@ -136,7 +180,7 @@ a.active{
   background-color: wheat;
   text-shadow: 1px 1px 15px blue;
 
-  transition: text-shadow 1s .3s;
+  transition: text-shadow 1s .1s;
   transform: scaleX(1.10) scaleY(1.04) translateX(7px);
   border-right: 4px solid wheat; 
   z-index: 1;
