--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,8 @@
 }
 
 body{
-
   background-color: wheat;
 }
-
-
-
 
 
 .title{
@@ -22,9 +18,6 @@ font-size: 24px;
  justify-content: space-evenly;
  right: 0;
  margin-right: 70px;
-
- 
-
 }
 
 @keyframes zoomIn {
@@ -46,8 +39,6 @@ img{
   filter: hue-rotate(280deg);
   transition: 2s;
   animation: .75s ease-out 0s 1 zoomIn;
-  
- 
   height: 135px;
   width: 411px;
   top:16px;
@@ -56,7 +47,6 @@ img{
 
 img:hover{
   filter: hue-rotate(200deg) ;
-
   transition: 1.5s;
   transition: filter 4s .5s, transform .8s;
   transform: scale(1.05);
@@ -77,7 +67,6 @@ img:hover{
   row-gap: 27px;
   column-gap: 20px;
   margin: 70px;
-
   justify-content: center;
 
 }
@@ -90,9 +79,10 @@ img:hover{
   font-size: 19px;
   background-color: rgb(1, 170, 119);
   transition: all .6s;
+  color: black;
 
- 
 }
+
 
 .ingredient:hover{
   background: rgb(201,255,239);
@@ -107,6 +97,7 @@ img:hover{
   transition: outline .2s;
   z-index: 1;
   transition: z-index none;
+
 }
 
 button{
@@ -145,6 +136,10 @@ nav{
 
 }
 
+a{
+  text-decoration: none;
+}
+
 .links a{
  
   font-family: 'Great Vibes', cursive;
@@ -157,9 +152,7 @@ nav{
   font-size: 37px;
   padding: 20px;
   padding-left: 35px;
-
   border: 2px solid rgba(0, 0, 0, 0);
-
   border-top-right-radius: 20px;
   border-top-left-radius: 9px;
   border-right: 7px solid rgba(46, 22, 6, 0.288); 
@@ -176,18 +169,14 @@ nav{
 
 a.active{
  
-
   background-color: wheat;
   text-shadow: 1px 1px 15px blue;
-
   transition: text-shadow 1s .1s;
   transform: scaleX(1.10) scaleY(1.04) translateX(7px);
   border-right: 4px solid wheat; 
   z-index: 1;
   transition: z-index none;
   font-weight: 700;
-
-
 
 }
 
